[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Menu/BoxMenu/BoxMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Font/HollowFont-regular, bold, italic.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menu/ResultMenu/ResultMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Music/Menu/ResultMusic.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect/HBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "Start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect/HBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ 1 ],
"method": "print_data"
}, {
"args": [ 2 ],
"method": "print_data"
}, {
"args": [ 3 ],
"method": "print_data"
}, {
"args": [ 4 ],
"method": "print_data"
} ]
}

[node name="ResultMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="NinePatchRect" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.666667 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -70.0
margin_right = 110.0
margin_bottom = 70.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 110, 70 )

[node name="NinePatchRect" parent="TextureRect" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -52.0
margin_right = 77.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_right = 22.5
margin_bottom = 17.0
custom_fonts/font = SubResource( 13 )
text = "Result"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -70.0
margin_right = 110.0
margin_bottom = 70.0
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 44.0
margin_right = 93.0
margin_bottom = 140.0
alignment = 1

[node name="LivesLabel" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 49.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 13 )
text = "Lives"

[node name="EnemyLabel" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 49.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 13 )
text = "enemy"

[node name="TimesLabel" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 49.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 13 )
text = "times"

[node name="RankLabel" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 49.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 13 )
text = "rank"

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect/HBoxContainer"]
margin_left = 113.0
margin_right = 175.0
margin_bottom = 140.0
alignment = 1

[node name="LivesValue" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer2"]
margin_top = 30.0
margin_right = 62.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 13 )
text = "-"
align = 2

[node name="EnemyValue" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer2"]
margin_top = 51.0
margin_right = 62.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 13 )
text = "-"
align = 2

[node name="TimesValue" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 62.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 13 )
text = "00:00:00"
align = 2

[node name="RankValue" type="Label" parent="TextureRect/HBoxContainer/VBoxContainer2"]
margin_top = 93.0
margin_right = 62.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 13 )
text = "-"
align = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/Start = SubResource( 15 )
